--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 </head>
 
 <body>
-    <textarea id="input" onkeyup="textAreaAdjust(this)"></textarea>
+    <textarea id="input" onkeyup="textAreaAdjust(this)" onpaste="auto_copy_text()"></textarea>
 
     <div>
+        <fieldset>
+            <legend> Settings </legend>
+        <label>Remove Indent?: </label>
+        <input id="no_indent" type="checkbox" value="Remove indent?" checked="true">
+        <br>
+        <label>Auto copy when pasting text?: </label>
+        <input id="auto_copy_text" type="checkbox" value="Remove indent?" checked="true">
+        <br>
         <button id="submit" onclick="copy()">Copy!</button>
+        </fieldset>
         <p id="note"></p>
     </div>
 </body>
